--- a/index.html
+++ b/index.html
@@ -3,31 +3,192 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baúl Pedagógico</title>
+    <title>EducaRural - Sistema de Gestión Pedagógica</title>
     <link rel="manifest" href="manifest.json">
     <style>
-        body { font-family: 'Segoe UI', sans-serif; text-align: center; padding: 20px; background-color: #e8f5e9; color: #2e7d32; }
-        .box { background: white; padding: 25px; border-radius: 20px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); max-width: 400px; margin: auto; }
-        button { background-color: #4caf50; color: white; border: none; padding: 15px 25px; font-size: 18px; border-radius: 50px; cursor: pointer; width: 100%; font-weight: bold; }
-        .item { background: #f1f8e9; margin: 10px 0; padding: 15px; border-radius: 10px; text-decoration: none; display: block; color: #1b5e20; font-weight: 500; }
+        :root {
+            --azul-institucional: #1565c0;
+            --azul-oscuro: #0d47a1;
+            --gris-fondo: #f4f7f9;
+            --texto: #2c3e50;
+        }
+
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            margin: 0;
+            background-color: var(--gris-fondo);
+            color: var(--texto);
+        }
+
+        /* Encabezado Institucional */
+        .header-gob {
+            background: var(--azul-oscuro);
+            color: white;
+            padding: 20px;
+            text-align: center;
+            border-bottom: 4px solid #ffca28; /* Detalle amarillo tipo bandera */
+        }
+
+        .header-gob h1 { margin: 0; font-size: 1.8rem; letter-spacing: 1px; }
+        .header-gob p { margin: 5px 0 0; font-size: 0.9rem; text-transform: uppercase; }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 0 15px;
+        }
+
+        /* Panel de Sincronización */
+        .sync-panel {
+            background: #fff;
+            border: 1px solid #d1d9e0;
+            padding: 20px;
+            border-radius: 8px;
+            margin-bottom: 25px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .sync-text { text-align: left; }
+        .sync-text h3 { margin: 0; color: var(--azul-institucional); }
+        .sync-text p { margin: 5px 0 0; font-size: 0.85rem; color: #666; }
+
+        .btn-descarga {
+            background: var(--azul-institucional);
+            color: white;
+            border: none;
+            padding: 12px 25px;
+            border-radius: 4px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .btn-descarga:hover { background: var(--azul-oscuro); }
+
+        /* Grilla de Materias */
+        .grid-materias {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+
+        .materia-card {
+            background: white;
+            border-radius: 8px;
+            border: 1px solid #e0e0e0;
+            overflow: hidden;
+        }
+
+        .materia-header {
+            background: #eceff1;
+            padding: 10px 15px;
+            font-weight: bold;
+            border-bottom: 1px solid #e0e0e0;
+            color: var(--azul-oscuro);
+        }
+
+        .lista-archivos { padding: 10px 0; }
+
+        .archivo-link {
+            display: flex;
+            align-items: center;
+            padding: 10px 15px;
+            text-decoration: none;
+            color: var(--texto);
+            font-size: 0.9rem;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        .archivo-link:hover { background: #f9f9f9; }
+        .archivo-link:last-child { border-bottom: none; }
+
+        .tag-tipo {
+            font-size: 0.7rem;
+            padding: 2px 6px;
+            border-radius: 3px;
+            margin-right: 10px;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        .pdf { background: #ffebee; color: #c62828; }
+        .video { background: #e3f2fd; color: #1565c0; }
+
+        footer {
+            margin-top: 40px;
+            padding: 20px;
+            text-align: center;
+            font-size: 0.8rem;
+            border-top: 1px solid #ddd;
+            background: #eee;
+        }
     </style>
 </head>
 <body>
-    <div class="box">
-        <h1>🎒 Mi Baúl</h1>
-        <p>Toca el botón verde antes de salir a la vereda:</p>
-        <button onclick="instalar()">📥 ACTIVAR MODO OFFLINE</button>
-        <div style="margin-top: 20px; text-align: left;">
-            <a class="item" href="https://tu-cuenta.blob.core.windows.net/clases/guia1.pdf">📖 Guía de Matemáticas</a>
-            <a class="item" href="https://tu-cuenta.blob.core.windows.net/clases/video1.mp4">🎥 Video: El Suelo</a>
+
+    <div class="header-gob">
+        <p>Institución Educativa Técnica San José del Guaviare</p>
+        <h1>Portal EducaRural</h1>
+    </div>
+
+    <div class="container">
+        <div class="sync-panel">
+            <div class="sync-text">
+                <h3>Sincronización de Materiales</h3>
+                <p>Use este botón antes de desplazarse a zonas sin cobertura.</p>
+            </div>
+            <button class="btn-descarga" onclick="iniciarSincronismo()">ACTUALIZAR BAÚL</button>
+        </div>
+
+        <h2 style="font-size: 1.2rem; color: #555; margin-bottom: 15px;">Repositorio de Guías Pedagógicas</h2>
+
+        <div class="grid-materias">
+            <div class="materia-card">
+                <div class="materia-header">Ciencias Naturales</div>
+                <div class="lista-archivos">
+                    <a href="https://tu-cuenta.blob.core.windows.net/clases/guia-agua.pdf" class="archivo-link">
+                        <span class="tag-tipo pdf">PDF</span> El Ciclo del Agua
+                    </a>
+                    <a href="https://tu-cuenta.blob.core.windows.net/clases/video-suelos.mp4" class="archivo-link">
+                        <span class="tag-tipo video">MP4</span> Conservación de Suelos
+                    </a>
+                </div>
+            </div>
+
+            <div class="materia-card">
+                <div class="materia-header">Matemáticas y Agro</div>
+                <div class="lista-archivos">
+                    <a href="https://tu-cuenta.blob.core.windows.net/clases/guia-mate.pdf" class="archivo-link">
+                        <span class="tag-tipo pdf">PDF</span> Cálculo de áreas de siembra
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
+
+    <footer>
+        <p>© 2026 - Secretaría de Educación Departamental - Caquetá / Guaviare<br>
+        Plataforma optimizada para baja conectividad.</p>
+    </footer>
+
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('sw.js');
         }
-        function instalar() {
-            alert("Sincronizando contenidos... ¡Listo! Ahora podrás ver estos archivos aunque no tengas señal.");
+
+        function iniciarSincronismo() {
+            const btn = document.querySelector('.btn-descarga');
+            btn.innerHTML = "Sincronizando...";
+            btn.disabled = true;
+            
+            // Simulación de descarga de archivos al caché
+            setTimeout(() => {
+                alert("Sincronización completa. El material está disponible para uso sin internet.");
+                btn.innerHTML = "BAÚL ACTUALIZADO";
+                btn.style.background = "#2e7d32";
+            }, 2500);
         }
     </script>
 </body>
